--- a/schedule-it/package.json
+++ b/schedule-it/package.json
@@ -33,6 +33,7 @@
     "@nativescript/theme": "~2.2.1",
     "core-js": "^2.6.9",
     "nativescript-angular": "~8.20.0",
+    "nativescript-carousel": "^6.1.1",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns": "^0.2.0",
