--- a/schedule-it/angular.json
+++ b/schedule-it/angular.json
@@ -26,7 +26,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/scss/styles.scss"
             ],
             "scripts": [],
             "stylePreprocessorOptions": {
