--- a/schedule-it/package.json
+++ b/schedule-it/package.json
@@ -4,6 +4,9 @@
     "id": "org.nativescript.scheduleit",
     "tns-ios": {
       "version": "6.5.0"
+    },
+    "tns-android": {
+      "version": "6.5.0"
     }
   },
   "version": "0.0.0",
