--- a/schedule-it/package.json
+++ b/schedule-it/package.json
@@ -37,6 +37,7 @@
     "core-js": "^2.6.9",
     "nativescript-angular": "~8.20.0",
     "nativescript-carousel": "^6.1.1",
+    "nativescript-image": "^3.0.6",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns": "^0.2.0",
