--- a/schedule-it/package.json
+++ b/schedule-it/package.json
@@ -38,6 +38,7 @@
     "nativescript-angular": "~8.20.0",
     "nativescript-carousel": "^6.1.1",
     "nativescript-image": "^3.0.6",
+    "nativescript-material-core": "^3.2.19",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns": "^0.2.0",
