--- a/schedule-it/package.json
+++ b/schedule-it/package.json
@@ -25,20 +25,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.0",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
     "@angular/http": "~8.0.0-beta.10",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@nativescript/theme": "~2.2.1",
     "core-js": "^2.6.9",
+    "hammerjs": "^2.0.8",
     "nativescript-angular": "~8.20.0",
     "nativescript-carousel": "^6.1.1",
     "nativescript-image": "^3.0.6",
     "nativescript-material-core": "^3.2.19",
+    "nativescript-svg": "^1.3.7",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns": "^0.2.0",
